--- a/System.ArrayExtension.Accelerated/Kernels/CLCode.resx
+++ b/System.ArrayExtension.Accelerated/Kernels/CLCode.resx
@@ -121,4 +121,7 @@
   <data name="ArithmeticKernel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>ArithmeticKernel.c;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="TrignometryKernel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>TrignometryKernel.c;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
